# stock-alert2

./: .gitignore  README.md  find_idealo_url.py  pyproject.toml  requirements.txt
.github/workflows/: scan-and-publish.yml
config/: sites.yaml  watchlist.yaml
docs/: SCRAPING_LIMITS.md  index.html
src/stock_alert/: browser_fetcher.py  cli.py  config.py  fetcher.py  models.py  notifier.py  parser.py  render.py  scanner.py  scraperapi_fetcher.py
templates/: index.html.j2
tests/: test_config.py  test_notifier.py  test_parser.py  test_scraperapi_fetcher.py
